--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <header class="header">
         <div class="profile-image"><img src="https://github.com/gogoadl.png" alt="Profile Image" style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover;"></div>
         <h1 class="name">박현우</h1>
-        <p class="title">소프트웨어로 문제를 해결하는 것에 큰 성취감을 느끼며, 자동화를 통해 업무 효율을 높이는 것을 즐기는 개발자입니다.</p>
+        <p class="title">소프트웨어로 세상의 문제를 해결하는 것에 성취감을 느끼는 개발자</p>
       </header>
 
       <main class="content">
