--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="contact-item">
               <a href="https://github.com/gogoadl" target="_blank">
                 <span class="contact-icon">🌐</span>
-                <div>github.com/gogoadl</div>
+                <div>Github</div>
               </a>
             </div>
             <div class="contact-item">
