--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
               <p><strong>주요 성과:</strong></p>
               <ul style="margin-left: 20px; margin-bottom: 15px;">
                 <li>LG CNS 내부 릴리즈 검증 프로세스 통과 (발견된 결함 207건 중 65건 조치)</li>
-                <li>폐쇄망 Windows 환경에서 Nginx, Jenkins, SonarQube를 구성하여 CI/CD 파이프라인 구축</li>
+                <li>폐쇄망 Windows 환경에서 Jenkins, SonarQube, Bitbucket을 활용하여 CI/CD 파이프라인 구축</li>
                 <li>Jenkins와 MS Teams 연동을 통한 빌드 결과 자동 알림 시스템 구현</li>
-                <li>Swagger API 문서를 활용한 SI 프로젝트 산출물 자동 생성 스크립트 개발</li>
+                <li>Swagger API 문서를 활용한 SI 프로젝트 산출물(API 명세서) 자동 생성 스크립트 개발</li>
               </ul>
               <div class="tech-stack">
                 <h5>Tech Stack</h5>
