--- a/index.html
+++ b/index.html
@@ -386,8 +386,9 @@
             <div class="experience-item">
               <h3 class="job-title">Unleash Java SDK 문서화 기여</h3>
               <p class="company"><a href="https://github.com/Unleash/unleash-client-java/pull/247" target="_blank" style="color: #3498db;">Pull Request #247</a></p>
+              <p class="company"><a href="https://github.com/Unleash/unleash-client-java/pull/309" target="_blank" style="color: #3498db;">Pull Request #309</a></p>
               <p class="description">
-                피쳐 플래깅 서비스 Unleash의 Java SDK 문서화에 기여했습니다.
+                피쳐 플래깅 서비스 Unleash의 Java SDK 문서화 및 테스트 코드에 기여했습니다.
               </p>
             </div>
   
